# storage/api-docs/api-docs.json
@@ -382,6 +382,35 @@
                 ]
             }
         },
+        "/password/request/reset": {
+            "post": {
+                "tags": [
+                    "Authentications"
+                ],
+                "description": "Sent link to reset user password",
+                "operationId": "requestResetPassword",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "email": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    }
+                }
+            }
+        },
         "/categories": {
             "get": {
                 "tags": [
